# CADKernel

./: .gitignore  CHANGELOG.ko.md  CHANGELOG.md  CODE_OF_CONDUCT.ko.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md  SECURITY.ko.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: bvh.rs  lib.rs  offset.rs  prelude.rs  tessellate.rs
crates/geometry/src/curve/: arc.rs  blend.rs  bspline_basis.rs  circle.rs  curve2d.rs  ellipse.rs  line.rs  mod.rs  nurbs.rs  nurbs_fitting.rs  offset_curve.rs  to_nurbs.rs  trimmed.rs
crates/geometry/src/intersect/: curve_curve.rs  curve_surface.rs  line_surface.rs  mod.rs  plane_cylinder.rs  plane_plane.rs  plane_sphere.rs  sphere_sphere.rs  surface_surface.rs  types.rs
crates/geometry/src/surface/: cone.rs  continuity.rs  curvature.rs  cylinder.rs  extrusion.rs  filling.rs  isocurve.rs  mod.rs  nurbs.rs  nurbs_fitting.rs  parametric_wire.rs  pipe.rs  plane.rs  revolution.rs  sphere.rs  to_nurbs.rs  torus.rs  trimmed.rs
crates/io/: Cargo.toml
crates/io/src/: brep_format.rs  collada.rs  dwg.rs  dxf.rs  gltf.rs  iges.rs  json.rs  lib.rs  mesh_ops.rs  native.rs  obj.rs  pdf.rs  ply.rs  step.rs  stl.rs  svg.rs  techdraw.rs  tessellate.rs  threemf.rs
crates/math/: Cargo.toml
crates/math/src/: bbox.rs  interop.rs  lib.rs  linalg.rs  matrix.rs  point.rs  prelude.rs  quaternion.rs  ray.rs  tolerance.rs  transform.rs  utils.rs  vector.rs
crates/modeling/: Cargo.toml
crates/modeling/benches/: modeling_benchmarks.rs
crates/modeling/src/: assembly.rs  body.rs  check.rs  compound.rs  draft_ops.rs  fem.rs  gear.rs  lib.rs  measure.rs  multi_transform.rs  query.rs  shape_analysis.rs  surface_ops.rs
crates/modeling/src/boolean/: broad_phase.rs  classify.rs  csg.rs  evaluate.rs  face_split.rs  mod.rs  trim_validate.rs
crates/modeling/src/features/: additive.rs  chamfer.rs  compound_ops.rs  copy_utils.rs  cross_sections.rs  defeature.rs  draft.rs  extrude.rs  face_from_wires.rs  fillet.rs  groove.rs  hole.rs  join.rs  loft.rs  mirror.rs  mod.rs  offset.rs  pad.rs  pattern.rs  pocket.rs  project_on_surface.rs  projection.rs  revolve.rs  scale.rs  section.rs  shape_convert.rs  shell.rs  split.rs  sweep.rs  taper_extrude.rs  thickness.rs
crates/modeling/src/primitives/: box_shape.rs  cone_shape.rs  cylinder_shape.rs  ellipsoid_shape.rs  helix_shape.rs  mod.rs  plane_face_shape.rs  polygon_shape.rs  prism_shape.rs  sphere_shape.rs  spiral_shape.rs  torus_shape.rs  tube_shape.rs  wedge_shape.rs
crates/modeling/tests/: cad_scenarios.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
crates/sketch/: Cargo.toml
crates/sketch/src/: constraint.rs  entity.rs  lib.rs  profile.rs  solver.rs  tools.rs  validate.rs
crates/topology/: Cargo.toml
crates/topology/src/: edge.rs  error.rs  face.rs  halfedge.rs  handle.rs  history.rs  lib.rs  loop_wire.rs  prelude.rs  properties.rs  shell.rs  solid.rs  store.rs  vertex.rs  wire.rs
crates/topology/src/naming/: history.rs  mod.rs  name_map.rs  tag.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: app.rs  command.rs  gui.rs  lib.rs  nav.rs  picking.rs  render.rs  scene.rs
crates/viewer/src/gui/: context_menu.rs  dialogs.rs  menu.rs  mod.rs  overlays.rs  properties.rs  report.rs  sketch_ui.rs  status_bar.rs  task_panel.rs  theme.rs  toolbar.rs  tree.rs  view_cube.rs
docs/: CHANGELOG.ko.md  CONTRIBUTING.ko.md  DEVELOPER_WIKI.ko.md  DEVELOPER_WIKI.md  FREECAD_PARITY_PLAN.ko.md  FREECAD_PARITY_PLAN.md  README.ko.md  SECURITY.ko.md  VERIFICATION_CHECKLIST.ko.md  VERIFICATION_CHECKLIST.md
docs/wiki/: API-Cookbook.md  Architecture.md  Crate:-core.md  Crate:-geometry.md  Crate:-io.md  Crate:-math.md  Crate:-modeling.md  Crate:-sketch.md  Crate:-topology.md  Crate:-viewer.md  Error-Handling.md  Getting-Started.md  Glossary.md  Home.md  Implementation-Status.md  Performance.md  Persistent-Naming.md  _Footer.md  _Sidebar.md
src/: lib.rs  main.rs
