[package]
name = "cadkernel-io"
description = "File I/O for CADKernel (STL, OBJ export, tessellation)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cadkernel-core.workspace = true
cadkernel-math.workspace = true
cadkernel-geometry.workspace = true
cadkernel-topology.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
