[package]
name = "cadkernel-math"
description = "Core math primitives for CADKernel (points, vectors, transforms)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nalgebra.workspace = true
glam.workspace = true
serde.workspace = true
