[package]
name = "cadkernel-sketch"
description = "2D constraint sketch solver for CADKernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cadkernel-math.workspace = true
